# git_test

./: .gitignore  README.md  pyproject.toml
team1000/: team.1000.text.py
test_2025/: name.md  ocr_translate.py
test_2025/excel_001/: .gitignore  README.md  main.py  pyproject.toml
test_2025/excel_001/temp/: 西红柿.xlsx
test_2025/text_depend/: .gitkeep  README.md  main.py  pyproject.toml
test_2025/text_depend/input_xlsx/: data.json  input.xlsx
test_2026/: team.3.text.py
test_2026/123_test/: README.md  main.py  pyproject.toml
test_2026/baodj and wh_test/: README.md  convert_to_list.py  full_data.csv  full_data.py  full_data.xlsx.py  main.py  pyproject.toml  read_excel.py  tuxiang.py
test_2026/lp_2026517/: README.md  aaa.py  chazhi.py  main.py  pyproject.toml
test_2026/team data 251/: READE.md
test_2026/team1000/: README.md  main.py  pyproject.toml
test_2026/wangxu_test/: README.md  main.py  pyproject.toml
test_2026/zhi_text/: README.md  main.py  pyproject.toml  test_2.py  text_1.py
