[project]
name = "baodj-and-wh-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "polars>=1.40.1",
]

[[tool.uv.index]]# uv的索引
# 清华源
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# 阿里源
# url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
