[project]
name = "lp-2026517"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "scipy>=1.17.1",
]
[[tool.uv.index]]# uv的索引
# 清华源
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# 阿里源
# url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
